pinger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: pinger
  name: pinger
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: pinger
  template:
    metadata:
      labels:
        app.kubernetes.io/name: pinger
    spec:
      containers:
      - image: ghcr.io/vfarcic/silly-demo:1.4.120
        livenessProbe:
          httpGet:
            path: /
            port: 8080
        name: pinger
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: 8080
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 250m
            memory: 256Mi
