pinger/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: pinger
  name: pinger
spec:
  rules:
    - host: pinger.127.0.0.1.nip.io
      http:
        paths:
          - backend:
              service:
                name: pinger
                port:
                  number: 8080
            path: /
            pathType: ImplementationSpecific
  ingressClassName: nginx
